--- a/static/css/base.css
+++ b/static/css/base.css
@@ -526,6 +526,7 @@ svg {
     flex: 1;
     position: relative;
     z-index: 1;
+    margin-bottom: 0;
 }
 
 /* Mobile Bottom Navigation */
